# Noether

./: .env.example  .gitignore  .srt-config.json  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  run.py
src/: __init__.py  cli.py  prompts.py  setup_sandbox.py
src/agents/: __init__.py  coder_agent.py  explore_agent.py  planner_agent.py
src/backends/: __init__.py  base.py  local_backend.py  openai_backend.py  provider_registry.py  token_tracker.py
src/config/: settings.py
src/memory/: __init__.py  planner_memory.py
src/modes/: __init__.py  planner_modes.py
src/observability/: __init__.py  log_handler.py  tracer.py
src/orchestration/: __init__.py  agentic_loop.py  autonomous_worker.py  dispatcher.py  editor.py  file_operations.py  orchestrator.py  pipeline.py  prompts.py  task.py  undo.py  undo_manager.py
src/sandbox/: __init__.py  command_executor.py  embeddings.py  filesystem_sandbox.py  schemas.py  tools.py
src/ui/: __init__.py  app.py  coder_worker.py  edit_handler.py  messages.py  planner_worker.py
src/ui/modals/: __init__.py  approval_modal.py  indexing_modal.py  undo_modal.py
src/ui/screens/: __init__.py  coder_view.py  settings_trace.py  task_manager.py
src/utils/: prompt_enricher.py
tests/: test_file_operation_parser.py  test_filesystem_sandbox.py  test_orchestration_integration.py  test_planner_memory.py  test_planner_modes.py  test_sandbox_executor.py  test_sandbox_integration.py  test_sandbox_sync_write.py  test_search_replace_editor.py  test_token_tracker.py  test_undo_stack.py
(+1 files in other folders)
