[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noether"
version = "0.1.0"
description = "Noether — terminal-based multi-agent code editor"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "burning-phoenix"},
]
keywords = ["ai", "code-editor", "tui", "multi-agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Text Editors",
]

dependencies = [
    "textual>=0.89.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.3.0",
    "fastembed>=0.4.0",
    "qdrant-client>=1.7.0",
]

[project.optional-dependencies]
local = [
    "llama-cpp-python>=0.3.0",
    "huggingface_hub>=0.20.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
noether = "src.cli:main"

[project.urls]
Homepage = "https://github.com/burning-phoenix/noether"
Issues = "https://github.com/burning-phoenix/noether/issues"

[tool.setuptools.packages.find]
include = ["src*"]
